--- a/README.yml
+++ b/README.yml
@@ -4,7 +4,8 @@ owner:
     name: Niu, Geng
     url: https://github.com/bigdata-i523/hid218
 paper1:
-    abstract: Big data has become the buzz words in recent years and it exerts huge
+    abstract: >
+        Big data has become the buzz words in recent years and it exerts huge
         influence on e-commerce and our lifestyle. However, for the general public
         big data is still something mysterious. This paper will serve as a review
         of what ways big data is utilized to improve e-commerce and influence our
