--- a/README.yml
+++ b/README.yml
@@ -20,6 +20,7 @@ paper1:
     type: latex
     url: https://github.com/bigdata-i523/hid218/paper1/paper1.pdf
 paper2:
+    review: Nov 6 2017
     abstract: This paper showcases tis and that and the other in regards to abc
     author:
         - Niu, Geng
