--- a/README.yml
+++ b/README.yml
@@ -12,7 +12,7 @@ paper1:
         daily life.
     author:
         - Niu, Geng
-    chapter: Ecommerce
+    chapter: Business
     hid:
         - 218
     status: 100%
