--- a/README.yml
+++ b/README.yml
@@ -4,6 +4,7 @@ owner:
     name: Niu, Geng
     url: https://github.com/bigdata-i523/hid218
 paper1:
+    exclude: True
     abstract: >
         Big data has become the buzz words in recent years and it exerts huge
         influence on e-commerce and our lifestyle. However, for the general public
